--- a/faq.html
+++ b/faq.html
@@ -76,16 +76,16 @@
             <!--main navigation-->
             <ul class="nav navbar-nav">
               <li class="home-link">
-                <a href="index.htm"><i class="fa fa-home"></i><span class="hidden">Home</span></a>
+                <a href="index.html"<i class="fa fa-home"></i><span class="hidden">Home</span></a>
               </li>
               <li class="dropdown">
-                <a href="about.htm">About</a> 
+                <a href="about.html"About</a> 
               </li>
               <li class="dropdown">
-                <a href="features.htm">Features</a> 
+                <a href="features.html"Features</a> 
               </li>
               <li class="dropdown">
-                <a href="services.htm">Services</a> 
+                <a href="services.html"Services</a> 
               </li>
              <li class="dropdown active">
                 <a href="faq.htm" class="dropdown-toggle" id="faq-drop" data-toggle="dropdown" data-hover="dropdown">FAQ</a> 
@@ -97,7 +97,7 @@
                 </ul>
               </li>
              <li class="dropdown">
-                <a href="contact.htm">Contact</a> 
+                <a href="contact.html"Contact</a> 
               </li>
               <li class="dropdown">
                 <a href="#" class="dropdown-toggle" id="about-drop" data-toggle="dropdown" data-hover="dropdown">Demo survey</a> 
