Rename all htm files to html

--- a/technical-features.html
+++ b/technical-features.html
@@ -60,7 +60,7 @@
             <div class="pull-left logo-box">
               <!--branding/logo-->
                <!--branding/logo-->
-              <a class="navbar-brand" href="index.htm" title="Home">
+              <a class="navbar-brand" href="index.html" title="Home">
                 <h1>
                 <img src="img/web-survey-logo.png" width="300" height="67" alt="Web Survey"> </h1>
               </a>
@@ -88,12 +88,12 @@
                 <a href="services.html"Services</a> 
               </li>
              <li class="dropdown active">
-                <a href="faq.htm" class="dropdown-toggle" id="faq-drop" data-toggle="dropdown" data-hover="dropdown">FAQ</a> 
+                <a href="faq.html" class="dropdown-toggle" id="faq-drop" data-toggle="dropdown" data-hover="dropdown">FAQ</a> 
                 <!-- Menu -->
                 <ul class="dropdown-menu" role="menu" aria-labelledby="features-drop">
-                  <li><a href="faq.htm" class="menu-item">Getting started</a></li>
-                  <li><a href="technical-features.htm" class="menu-item">Technical Features</a></li>
-                  <li><a href="about-web-survey.htm" class="menu-item">About WebSurvey</a></li>
+                  <li><a href="faq.html" class="menu-item">Getting started</a></li>
+                  <li><a href="technical-features.html" class="menu-item">Technical Features</a></li>
+                  <li><a href="about-web-survey.html" class="menu-item">About WebSurvey</a></li>
                 </ul>
               </li>
              <li class="dropdown">
@@ -122,21 +122,21 @@
         <div class="section-menu">
           <ul class="nav nav-list">
             <li>
-              <a href="faq.htm" class="first">
+              <a href="faq.html" class="first">
                 Getting Started 
                 <small>An introduction to WebSurvey</small>
                 <i class="fa fa-angle-right"></i>
               </a>
             </li>
             <li class="active">
-              <a href="technical-features.htm" class="first">
+              <a href="technical-features.html" class="first">
                 Technical Features 
                 <small>Secure and Accessible</small>
                 <i class="fa fa-angle-right"></i>
               </a>
             </li>
             <li>
-              <a href="about-web-survey.htm" class="first">
+              <a href="about-web-survey.html" class="first">
                 About WebSurvey 
                 <small>Our Philosophy</small>
                 <i class="fa fa-angle-right"></i>
@@ -232,7 +232,7 @@
       <!--@todo: replace with company copyright details-->
       <div class="subfooter">
       <div class="col-md-12">
-      <a class="navbar-brand" href="index.htm" title="WebSurvey Home">
+      <a class="navbar-brand" href="index.html" title="WebSurvey Home">
         <img src="img/web-survey-logo-sm.png" width="100" height="22" alt="WebSurvey"></a><span class="strat-dat"> a <a href="http://www.strategicdata.com.au/" title="Strategic Data">Strategic Data</a> business. &copy; 2014</span></div>
         <div class="col-md-12 col-sm-12 col-xs-12">
           <ul class="list-inline footer-menu">
