Rename all htm files to html

--- a/contact.html
+++ b/contact.html
@@ -79,13 +79,13 @@
                 <a href="index.html">i class="fa fa-home"></i><span class="hidden">Home</span></a>
               </li>
               <li class="dropdown">
-                <a href="about.html"About</a> 
+                <a href="about.html">About</a> 
               </li>
               <li class="dropdown">
-                <a href="features.html"Features</a> 
+                <a href="features.html">Features</a> 
               </li>
               <li class="dropdown">
-                <a href="services.html"Services</a> 
+                <a href="services.html">Services</a> 
               </li>
            <li class="dropdown">
                 <a href="faq.html" class="dropdown-toggle" id="faq-drop" data-toggle="dropdown" data-hover="dropdown">FAQ</a> 
@@ -97,7 +97,7 @@
                 </ul>
               </li>
               <li class="dropdown active">
-                <a href="contact.html"Contact</a> 
+                <a href="contact.html">Contact</a> 
               </li>
               <li class="dropdown">
                 <a href="#" class="dropdown-toggle" id="about-drop" data-toggle="dropdown" data-hover="dropdown">Demo survey</a> 
