--- a/index.html
+++ b/index.html
@@ -76,16 +76,16 @@
             <!--main navigation-->
             <ul class="nav navbar-nav">
               <li class="home-link active">
-                <a href="index.html">i class="fa fa-home"></i><span class="hidden">Home</span></a>
+                <a href="index.html"><i class="fa fa-home"></i><span class="hidden">Home</span></a>
               </li>
              <li class="dropdown">
-                <a href="about.html"About</a> 
+                <a href="about.html">About</a> 
               </li>
               <li class="dropdown">
-                <a href="features.html"Features</a> 
+                <a href="features.html">Features</a> 
               </li>
               <li class="dropdown">
-                <a href="services.html"Services</a> 
+                <a href="services.html">Services</a> 
               </li>
                <li class="dropdown">
                 <a href="faq.html" class="dropdown-toggle" id="faq-drop" data-toggle="dropdown" data-hover="dropdown">FAQ</a> 
@@ -97,7 +97,7 @@
                 </ul>
               </li>
               <li class="dropdown">
-                <a href="contact.html"Contact</a> 
+                <a href="contact.html">Contact</a> 
               </li>
               <li class="dropdown">
                 <a href="#" class="dropdown-toggle" id="about-drop" data-toggle="dropdown" data-hover="dropdown">Demo survey</a> 
@@ -158,7 +158,7 @@ simply hand us your questions and we can do the rest</p>
             <img src="img/features/helpdesk.png" alt="Feature 1" />
           </a>
           <h3 class="title">
-            <a href="features.html"Helpdesk</a>
+            <a href="features.html">Helpdesk</a>
           </h3>
           <p>Assistance for your respondents.</p>
         </div>
@@ -167,7 +167,7 @@ simply hand us your questions and we can do the rest</p>
             <img src="img/features/secure.png" alt="Feature 2" />
           </a>
           <h3 class="title">
-            <a href="features.html"Secure</a>
+            <a href="features.html">Secure</a>
           </h3>
           <p>Hosted in a secure Melbourne based co-location facility.</p>
         </div>
@@ -176,7 +176,7 @@ simply hand us your questions and we can do the rest</p>
             <img src="img/features/accessible.png" alt="Feature 3"/>
           </a>
           <h3 class="title">
-            <a href="features.html"Accessible</a>
+            <a href="features.html">Accessible</a>
           </h3>
           <p>All respondents can engage with your surveys.</p>
         </div>
@@ -185,7 +185,7 @@ simply hand us your questions and we can do the rest</p>
             <img src="img/features/support.png" alt="Feature 4" />
           </a>
           <h3 class="title">
-            <a href="features.html"Full support</a>
+            <a href="features.html">Full support</a>
           </h3>
           <p>Wording to be supplied.</p>
         </div>
