Rename all htm files to html

--- a/about-web-survey.html
+++ b/about-web-survey.html
@@ -76,7 +76,7 @@
             <!--main navigation-->
             <ul class="nav navbar-nav">
               <li class="home-link">
-                <a href="index.html">i class="fa fa-home"></i><span class="hidden">Home</span></a>
+                <a href="index.html"><i class="fa fa-home"></i><span class="hidden">Home</span></a>
               </li>
                  <li class="dropdown">
                 <a href="about.html">About</a> 
