Implicit home link rather than explicit index.html.

--- a/plugins/html5shiv/test/index.html
+++ b/plugins/html5shiv/test/index.html
@@ -38,7 +38,7 @@
 				<a href="highcharts/area-basic.html">area-basic.html</a>: <span class="pass">PASS</span>
 			</li>
 			<li>
-				<a href="jquery-1.7.1/index.html">simplified jQuery test suite</a>:
+				<a href="jquery-1.7.1/">simplified jQuery test suite</a>:
 			</li>
 		</ul>
 	<body>
