--- a/plugins/html5shiv/test/jquery-1.7.1/index.html
+++ b/plugins/html5shiv/test/jquery-1.7.1/index.html
@@ -16,7 +16,7 @@
 		<script src="unit/manipulation.js"></script>
 	</head>
 	<body id="body">
-		<h1 id="qunit-header"><a href="/jquery/test/index.html">jQuery Test Suite</a>
+		<h1 id="qunit-header"><a href="/jquery/test/">jQuery Test Suite</a>
 			<a href="?jquery=min">(minified)</a>
 		</h1>
 		<h2 id="qunit-banner"></h2>
