--- a/faq.html
+++ b/faq.html
@@ -60,7 +60,7 @@
             <div class="pull-left logo-box">
               <!--branding/logo-->
                <!--branding/logo-->
-              <a class="navbar-brand" href="index.html" title="Home">
+              <a class="navbar-brand" href="/" title="Home">
                 <h1>
                 <img src="img/web-survey-logo.png" width="300" height="67" alt="Web Survey"> </h1>
               </a>
@@ -76,7 +76,7 @@
             <!--main navigation-->
             <ul class="nav navbar-nav">
               <li class="home-link">
-                <a href="index.html"><i class="fa fa-home"></i><span class="hidden">Home</span></a>
+                <a href="/"><i class="fa fa-home"></i><span class="hidden">Home</span></a>
               </li>
               <li class="dropdown">
                 <a href="about.html">About</a> 
@@ -242,7 +242,7 @@
       <!--@todo: replace with company copyright details-->
       <div class="subfooter">
       <div class="col-md-12">
-      <a class="navbar-brand" href="index.html" title="WebSurvey Home">
+      <a class="navbar-brand" href="/" title="WebSurvey Home">
         <img src="img/web-survey-logo-sm.png" width="100" height="22" alt="WebSurvey"></a><span class="strat-dat"> a <a href="http://www.strategicdata.com.au/" title="Strategic Data">Strategic Data</a> business. &copy; 2014</span></div>
         <div class="col-md-12 col-sm-12 col-xs-12">
           <ul class="list-inline footer-menu">
