--- a/plugins/flexslider/demo/basic-carousel.html
+++ b/plugins/flexslider/demo/basic-carousel.html
@@ -26,7 +26,7 @@
       <h3 class="header-nav">Other Examples</h3>
       <nav>
         <ul>
-          <li><a href="index.html">Basic Slider</a></li>
+          <li><a href="/">Basic Slider</a></li>
           <li><a href="thumbnail-controlnav.html">Slider w/thumbnail controlNav pattern</a></li>
           <li><a href="thumbnail-slider.html">Slider w/thumbnail slider</a></li>
           <li class="active"><a href="basic-carousel.html">Basic Carousel</a></li>
