--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
                 </div>
                 <div class="col-md-6 caption">
                   <h4 data-animate-in="bounceInRight" data-animate-delay="de-02">
-                    Mobile-ready, secure and robust managed solutions
+                    Mobile-ready, secure, and robust managed solutions
                   </h4>
                   <p data-animate-in="bounceInRight" data-animate-delay="de-04">WebSurvey is a full-service online survey solution; 
 simply hand us your questions and we can do the rest</p>
