--- a/index.html
+++ b/index.html
@@ -1,117 +1,6 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    <meta charset="utf-8">
-    <title>WebSurvey - Home</title>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- @todo: fill with your company info or remove -->
-    <meta name="description" content="">
-    <meta name="author" content="Themelize.me">
-    <!-- Bootstrap CSS -->
-    <link href="css/bootstrap.min.css" rel="stylesheet">  
-    <!-- Font Awesome -->
-    <link href="css/font-awesome.min.css" rel="stylesheet">
-    
-    <!-- Plugins required on all pages NOTE: Additional non-required plugins are loaded ondemand as of AppStrap 2.5 -->
-    <!-- Plugin: animate.css (animated effects) - http://daneden.github.io/animate.css/ -->
-    <link href="plugins/animate/animate.css" rel="stylesheet">
-    <!-- @LINEBREAK -- <!-- Plugin: flag icons - http://lipis.github.io/flag-icon-css/ -->
-    <link href="plugins/flag-icon-css/css/flag-icon.min.css" rel="stylesheet">
-    <!-- Theme style -->
-    <link href="css/theme-style.min.css" rel="stylesheet">
-    <!--Your custom colour override-->
-     <link href="css/colour-red.css" id="colour-scheme" rel="stylesheet">   
-    <!-- Your custom override -->
-    <link href="css/custom-style.css" rel="stylesheet">   
-    <!-- HTML5 shiv & respond.js for IE6-8 support of HTML5 elements & media queries -->
-    <!--[if lt IE 9]>
-    <script src="plugins/html5shiv/dist/html5shiv.js"></script>
-    <script src="plugins/respond/respond.min.js"></script>
-    <![endif]-->  
-    <!-- Le fav and touch icons - @todo: fill with your icons or remove -->
-    <link rel="shortcut icon" href="img/icons/favicon.png">
-    <link rel="apple-touch-icon-precomposed" sizes="114x114" href="img/icons/114x114.png">
-    <link rel="apple-touch-icon-precomposed" sizes="72x72" href="img/icons/72x72.png">
-    <link rel="apple-touch-icon-precomposed" href="img/icons/default.png">
-    <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,700,300' rel='stylesheet' type='text/css'>
-    <link href='http://fonts.googleapis.com/css?family=Rambla' rel='stylesheet' type='text/css'>
-    <link href='http://fonts.googleapis.com/css?family=Calligraffitti' rel='stylesheet' type='text/css'>  
-    <!--Plugin: Retina.js (high def image replacement) - @see: http://retinajs.com/-->
-    <script src="plugins/retina/js/retina-1.1.0.min.js"></script>
-  <!-- get jQuery from the google apis -->
-  </head> 
-  <!-- ======== @Region: body ======== -->
-  <body class="page page-index-static">
-    <a href="#content" class="sr-only">Skip to content</a> 
-    <!-- ======== @Region: #navigation ======== -->
-    <div id="navigation" class="wrapper">
-      <div class="navbar-static-top">
-        <!--Header upper region-->
-        <div class="header-upper">
-          <div class="header-upper-inner container">
-        </div>
-      </div>
-      <!--Header & Branding region-->
-      <div class="header" data-toggle="clingify">
-        <div class="header-inner container">
-          <div class="navbar">
-            <div class="pull-left logo-box">
-              <!--branding/logo-->
-               <!--branding/logo-->
-              <a class="navbar-brand" href="/" title="Home">
-                <h1>
-                <img src="img/web-survey-logo.png" class="img-responsive" width="300" height="67" alt="Web Survey"> </h1>
-              </a>
-              <div class="slogan">online data collection expertise</div>
-            </div>          
-            <div class="contact-icon-box">
-            <i class="fa fa-phone fa-flip-horizontal phone-icon"></i> <span>+613 9340 9001</span>
-          </div>
-          <!-- mobile collapse menu button - data-toggle="toggle" = default BS menu - data-toggle="jpanel-menu" = jPanel Menu -->
-          <a href="#top" class="navbar-btn" data-toggle="jpanel-menu" data-target=".navbar-collapse" data-direction="right"><i class="fa fa-bars"></i></a>
-          <!--everything within this div is collapsed on mobile-->
-          <div class="navbar-collapse collapse">
-            <!--main navigation-->
-            <ul class="nav navbar-nav">
-              <li class="home-link active">
-                <a href="/"><i class="fa fa-home"></i><span class="hidden">Home</span></a>
-              </li>
-             <li class="dropdown">
-                <a href="about.html">About</a> 
-              </li>
-              <li class="dropdown">
-                <a href="features.html">Features</a> 
-              </li>
-              <li class="dropdown">
-                <a href="services.html">Services</a> 
-              </li>
-               <li class="dropdown">
-                <a href="faq.html" class="dropdown-toggle" id="faq-drop" data-toggle="dropdown" data-hover="dropdown">FAQ</a> 
-                <!-- Menu -->
-                <ul class="dropdown-menu" role="menu" aria-labelledby="features-drop">
-                  <li><a href="faq.html" class="menu-item">Getting started</a></li>
-                  <li><a href="technical-features.html" class="menu-item">Technical Features</a></li>
-                  <li><a href="about-web-survey.html" class="menu-item">About WebSurvey</a></li>
-                </ul>
-              </li>
-              <li class="dropdown">
-                <a href="contact.html">Contact</a> 
-              </li>
-              <li class="dropdown">
-                <a href="#" class="dropdown-toggle" id="about-drop" data-toggle="dropdown" data-hover="dropdown">Demo survey</a> 
-              </li>
-            </ul>
-          </div>
-          <!--/.navbar-collapse -->
-        </div>
-      </div>
-    </div>
-  </div>
-</div>
+---
+---
 <!-- ======== @Region: #highlighted ======== -->
-
 <div id="highlighted">
   <div class="inner">
     <!--Showshow-->
@@ -123,7 +12,7 @@
             <div class="slide-content">
               <div class="row">
                 <div class="col-md-5">
-                  <img src="img/slides/websurvey-multi-device.png" alt="Slide 1" data-animate-in="bounceInLeft" data-animate-delay="de-08" />
+                  <img src="/img/slides/websurvey-multi-device.png" alt="Slide 1" data-animate-in="bounceInLeft" data-animate-delay="de-08" />
                 </div>
                 <div class="col-md-6 caption">
                   <h4 data-animate-in="bounceInRight" data-animate-delay="de-02">
@@ -143,7 +32,6 @@ simply hand us your questions and we can do the rest</p>
   </div>
 </div>
 
-
 <!-- ======== @Region: #content ======== -->
 <div id="content">
   <div class="container">
@@ -154,43 +42,43 @@ simply hand us your questions and we can do the rest</p>
       </h2>
       <div class="row">
         <div class="feature col-sm-6 col-md-3">
-          <a href="features.html"
-            <img src="img/features/helpdesk.png" alt="Feature 1" />
+          <a href="/features/"
+            <img src="/img/features/helpdesk.png" alt="Feature 1" />
           </a>
           <h3 class="title">
-            <a href="features.html">Helpdesk</a>
+            <a href="/features/">Helpdesk</a>
           </h3>
           <p>Assistance for your respondents.</p>
         </div>
         <div class="feature col-sm-6 col-md-3">
-          <a href="features.html"
-            <img src="img/features/secure.png" alt="Feature 2" />
+          <a href="/features/"
+            <img src="/img/features/secure.png" alt="Feature 2" />
           </a>
           <h3 class="title">
-            <a href="features.html">Secure</a>
+            <a href="/features/">Secure</a>
           </h3>
           <p>Hosted in a secure Melbourne based co-location facility.</p>
         </div>
         <div class="feature col-sm-6 col-md-3">
-          <a href="features.html"
-            <img src="img/features/accessible.png" alt="Feature 3"/>
+          <a href="/features/"
+            <img src="/img/features/accessible.png" alt="Feature 3"/>
           </a>
           <h3 class="title">
-            <a href="features.html">Accessible</a>
+            <a href="/features/">Accessible</a>
           </h3>
           <p>All respondents can engage with your surveys.</p>
         </div>
         <div class="feature col-sm-6 col-md-3">
-          <a href="features.html"
-            <img src="img/features/support.png" alt="Feature 4" />
+          <a href="/features/"
+            <img src="/img/features/support.png" alt="Feature 4" />
           </a>
           <h3 class="title">
-            <a href="features.html">Full support</a>
+            <a href="/features/">Full support</a>
           </h3>
           <p>Wording to be supplied.</p>
         </div>
         <div class="col-sm-12 col-md-12 space-below">
-        <a href="features.html" class="btn btn-md btn-primary">More features</a> 
+        <a href="/features/" class="btn btn-md btn-primary">More features</a> 
         </div>
       </div>
     </div>
@@ -268,19 +156,19 @@ simply hand us your questions and we can do the rest</p>
   <!-- Logos carousel Uses Owl Carousel plugin All options here are customisable from the data-owl-carousel-settings="{OBJECT}" item via data- attributes: http://www.owlgraphic.com/owlcarousel/#customizing ie. data-settings="{"items": "4", "lazyLoad":"true", "navigation":"true"}" -->
         <div class="customers-carousel" data-toggle="owl-carousel" data-owl-carousel-settings='{"items": 4, "lazyLoad":true, "navigation":true, "scrollPerPage":true}'>
           <a href="#">
-            <img src="img/logos/TP.jpg" alt="Towers Perrin" class="lazyOwl img-responsive underlay" data-src="img/logos/TP.jpg" />
+            <img src="/img/logos/TP.jpg" alt="Towers Perrin" class="lazyOwl img-responsive underlay" data-src="img/logos/TP.jpg" />
           </a>
           <a href="#">
-            <img src="img/logos/HRC.jpg" alt="HRC" class="lazyOwl img-responsive underlay" data-src="img/logos/HRC.jpg" />
+            <img src="/img/logos/HRC.jpg" alt="HRC" class="lazyOwl img-responsive underlay" data-src="img/logos/HRC.jpg" />
           </a>
           <a href="#">
-            <img src="img/logos/DSE.jpg" alt="DSE" class="lazyOwl img-responsive underlay" data-src="img/logos/DSE.jpg" />
+            <img src="/img/logos/DSE.jpg" alt="DSE" class="lazyOwl img-responsive underlay" data-src="img/logos/DSE.jpg" />
           </a>
           <a href="#">
-            <img src="img/logos/VU.jpg" alt="Victoria University" class="lazyOwl img-responsive underlay" data-src="img/logos/VU.jpg" />
+            <img src="/img/logos/VU.jpg" alt="Victoria University" class="lazyOwl img-responsive underlay" data-src="img/logos/VU.jpg" />
           </a>
           <a href="#">
-            <img src="img/logos/UoM.jpg" alt="University of Melbourne" class="lazyOwl img-responsive underlay" data-src="img/logos/UoM.jpg" />
+            <img src="/img/logos/UoM.jpg" alt="University of Melbourne" class="lazyOwl img-responsive underlay" data-src="img/logos/UoM.jpg" />
           </a>
          
         </div>
@@ -289,80 +177,3 @@ simply hand us your questions and we can do the rest</p>
     </div>
   </div>
 </div>
-<!-- FOOTER -->
-<!-- ======== @Region: #footer ======== -->
-<footer id="footer">
-  <div class="container">
-    <div class="row">
-      <div class="col-md-8 col">
-        <div class="block contact-block">
-          <!--@todo: replace with company contact details-->
-          <h3> Contact Us</h3>
-          <address>
-            <ul class="fa-ul">
-              <li>
-                <abbr title="Phone"><i class="fa fa-li fa-phone"></i></abbr>
-                +613 9340 9001
-              </li>
-              <li>
-                <abbr title="Email"><i class="fa fa-li">@</i></abbr>
-                <a href="mailto:info@websurvey.com.au">info@websurvey.com.au</a>
-              </li>
-              <li>
-                <abbr title="Address"><i class="fa fa-li fa-home"></i></abbr>
-                2nd floor, 51 – 55 Johnston Street, Fitzroy , Victoria 3065, Australia
-              </li>
-              <li>
-                <abbr title="Address"><i class="fa fa-li fa-envelope"></i></abbr>
-                PO Box 1166, Carlton, Victoria 3053, Australia
-              </li>
-            </ul>
-          </address>
-        </div>
-      </div>
-      <div class="col-md-4 col">
-        <div class="block newsletter">
-          <h3>Stay in touch</h3>
-          <p>Stay up to date with our latest news and product releases by signing up to our newsletter.</p>
-          <!--@todo: replace with mailchimp code-->
-          <form role="form">
-            <div class="input-group input-group-sm">
-              <label class="sr-only" for="email-field">Email</label>
-              <input type="text" class="form-control" id="email-field" placeholder="Email">
-              <span class="input-group-btn">
-                <button class="btn btn-primary" type="button">Go!</button>
-              </span>
-            </div>
-          </form>
-        </div>
-      </div>
-    </div>
-    <div class="row">
-      <div id="toplink">
-        <a href="#top" class="top-link" title="Back to top">Back To Top <i class="fa fa-chevron-up"></i></a>
-      </div>
-      <!--@todo: replace with company copyright details-->
-      <div class="subfooter">
-      <div class="col-md-12">
-      <a class="navbar-brand" href="/" title="WebSurvey Home">
-        <img src="img/web-survey-logo-sm.png" width="100" height="22" alt="WebSurvey"></a><span class="strat-dat"> a <a href="http://www.strategicdata.com.au/" title="Strategic Data">Strategic Data</a> business. &copy; 2014</span></div>
-        <div class="col-md-12 col-sm-12 col-xs-12">
-          <ul class="list-inline footer-menu">
-            <li><a href="#">Terms</a></li>
-            <li><a href="#">Privacy</a></li>
-            <li><a href="#">Contact Us</a></li>
-          </ul>
-        </div>
-      </div>
-    </div>
-  </div>
-</footer>
-<!--Scripts -->
-<script src="js/jquery.min.js"></script>
-<!-- Bootstrap JS -->
-<script src="js/bootstrap.min.js"></script>
-<!-- JS plugins required on all pages NOTE: Additional non-required plugins are loaded ondemand as of AppStrap 2.5 -->
-<!--Custom scripts mainly used to trigger libraries/plugins -->
-<script src="js/script.min.js"></script>
-</body>
-</html>
