--- a/faq/technical-features.html
+++ b/faq/technical-features.html
@@ -11,21 +11,21 @@
         <div class="section-menu">
           <ul class="nav nav-list">
             <li>
-              <a href="faq.html" class="first">
+              <a href="/faq/" class="first">
                 Getting Started 
                 <small>An introduction to WebSurvey</small>
                 <i class="fa fa-angle-right"></i>
               </a>
             </li>
             <li class="active">
-              <a href="technical-features.html" class="first">
+              <a href="/faq/technical-features.html" class="first">
                 Technical Features 
                 <small>Secure and Accessible</small>
                 <i class="fa fa-angle-right"></i>
               </a>
             </li>
             <li>
-              <a href="about-web-survey.html" class="first">
+              <a href="/faq/about-web-survey.html" class="first">
                 About WebSurvey 
                 <small>Our Philosophy</small>
                 <i class="fa fa-angle-right"></i>
