--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@ simply hand us your questions and we can do the rest</p>
           </div>
       <!-- How does it work box end -->         
         <div class="col-sm-12 col-md-12 space-below">
-        <a href="faq.html" class="btn btn-md btn-primary">Read our FAQs</a> 
+        <a href="/faq/" class="btn btn-md btn-primary">Read our FAQs</a> 
         </div>
       </div>
     </div>
