Remove anchors to nowhere and add an id='top'

--- a/index.html
+++ b/index.html
@@ -155,19 +155,19 @@ simply hand us your questions and we can do the rest</p>
 <div id="clients">
   <!-- Logos carousel Uses Owl Carousel plugin All options here are customisable from the data-owl-carousel-settings="{OBJECT}" item via data- attributes: http://www.owlgraphic.com/owlcarousel/#customizing ie. data-settings="{"items": "4", "lazyLoad":"true", "navigation":"true"}" -->
         <div class="customers-carousel" data-toggle="owl-carousel" data-owl-carousel-settings='{"items": 4, "lazyLoad":true, "navigation":true, "scrollPerPage":true}'>
-          <a href="#">
+          <a href="/">
             <img src="/img/logos/TP.jpg" alt="Towers Perrin" class="lazyOwl img-responsive underlay" data-src="img/logos/TP.jpg" />
           </a>
-          <a href="#">
+          <a href="/">
             <img src="/img/logos/HRC.jpg" alt="HRC" class="lazyOwl img-responsive underlay" data-src="img/logos/HRC.jpg" />
           </a>
-          <a href="#">
+          <a href="/">
             <img src="/img/logos/DSE.jpg" alt="DSE" class="lazyOwl img-responsive underlay" data-src="img/logos/DSE.jpg" />
           </a>
-          <a href="#">
+          <a href="/">
             <img src="/img/logos/VU.jpg" alt="Victoria University" class="lazyOwl img-responsive underlay" data-src="img/logos/VU.jpg" />
           </a>
-          <a href="#">
+          <a href="/">
             <img src="/img/logos/UoM.jpg" alt="University of Melbourne" class="lazyOwl img-responsive underlay" data-src="img/logos/UoM.jpg" />
           </a>
          
