--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                   </h4>
                   <p data-animate-in="bounceInRight" data-animate-delay="de-04">WebSurvey is a full-service online survey solution; 
 simply hand us your questions and we can do the rest</p>
-                  <a href="#" class="btn btn-lg btn-primary" data-animate-in="bounceInRight" data-animate-delay="de-06">View demo survey</a> 
+                  <a href="/" class="btn btn-lg btn-primary" data-animate-in="bounceInRight" data-animate-delay="de-06">View demo survey</a> 
                 </div>
               </div>
             </div>
