Fix some html issues.

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@ simply hand us your questions and we can do the rest</p>
       </h2>
       <div class="row">
         <div class="feature col-sm-6 col-md-3">
-          <a href="/features/"
+          <a href="/features/">
             <img src="/img/features/helpdesk.png" alt="Feature 1" />
           </a>
           <h3 class="title">
@@ -51,7 +51,7 @@ simply hand us your questions and we can do the rest</p>
           <p>Assistance for your respondents.</p>
         </div>
         <div class="feature col-sm-6 col-md-3">
-          <a href="/features/"
+          <a href="/features/">
             <img src="/img/features/secure.png" alt="Feature 2" />
           </a>
           <h3 class="title">
@@ -60,7 +60,7 @@ simply hand us your questions and we can do the rest</p>
           <p>Hosted in a secure Melbourne based co-location facility.</p>
         </div>
         <div class="feature col-sm-6 col-md-3">
-          <a href="/features/"
+          <a href="/features/">
             <img src="/img/features/accessible.png" alt="Feature 3"/>
           </a>
           <h3 class="title">
@@ -69,7 +69,7 @@ simply hand us your questions and we can do the rest</p>
           <p>All respondents can engage with your surveys.</p>
         </div>
         <div class="feature col-sm-6 col-md-3">
-          <a href="/features/"
+          <a href="/features/">
             <img src="/img/features/support.png" alt="Feature 4" />
           </a>
           <h3 class="title">
