Delete more detritus, use html5validator instead since nokogiri lost our address.

--- a/contact/index.html
+++ b/contact/index.html
@@ -46,7 +46,7 @@
                PO Box 1166, Carlton, Victoria 3053, Australia
             </p>
             <p>
-            <iframe src="https://www.google.com/maps/embed?pb=!1m24!1m12!1m3!1d50442.64951781364!2d144.94215538729114!3d-37.797875993516584!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!4m9!1i0!3e6!4m0!4m5!1s0x6ad643274334fbcf%3A0x37e2cf3b959ac1d0!2s51-55+Johnston+St%2C+Fitzroy+VIC+3065%2C+Australia!3m2!1d-37.797881!2d144.976574!5e0!3m2!1sen!2suk!4v1409292640562" width="300" height="250" frameborder="0" style="border:0"></iframe>
+            <iframe src="https://www.google.com/maps/embed?pb=!1m24!1m12!1m3!1d50442.64951781364!2d144.94215538729114!3d-37.797875993516584!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!4m9!1i0!3e6!4m0!4m5!1s0x6ad643274334fbcf%3A0x37e2cf3b959ac1d0!2s51-55+Johnston+St%2C+Fitzroy+VIC+3065%2C+Australia!3m2!1d-37.797881!2d144.976574!5e0!3m2!1sen!2suk!4v1409292640562" width="300" height="250" style="border:0"></iframe>
             </p>
           </div>
         </div>
