--- a/about/privacy.html
+++ b/about/privacy.html
@@ -7,9 +7,11 @@
       <h2 class="title-divider">
         <span><span>WebSurvey</span> Privacy</span>
       </h2>
+    </div>
     <div id="privacy">
       <div class="inner">
 
       </div>
     </div>
+  </div>
 </div><!-- /content--> 
