--- a/about/terms.html
+++ b/about/terms.html
@@ -7,9 +7,11 @@
       <h2 class="title-divider">
         <span><span>WebSurvey</span> Terms</span>
       </h2>
+    </div>
     <div id="terms">
       <div class="inner">
 
       </div>
     </div>
+  </div>
 </div><!-- /content--> 
