Various updates to content

--- a/faq/technical-features.html
+++ b/faq/technical-features.html
@@ -42,15 +42,15 @@
         
         <!-- About company -->
         <h4>My survey is very large and complex, can WebSurvey cope?</h4>
-        <p>Aliquip bene ea humo odio ratis scisco utinam. Appellatio defui interdico neo premo refoveo vel. Abico blandit dignissim eligo metuo molior persto sino tation. Abbas antehabeo bene dignissim iusto quae qui vicis.</p>
+        <p>Yes. WebSurvey is a comprehensive platform able to manage thousands of respondents in a single survey.</p>
 
 		<h4>Where will my online survey be hosted?</h4>
-       	<p>Dignissim genitus jumentum nulla nutus pagus pala quae sed sudo. Defui fere hos iriure laoreet voco.</p>
+       	<p>We host our surveys on our own systems at a secure Melbourne based co-location facility. This facility includes 24/7 monitoring, 24/7 guarded and monitored access, climate control, redundant power and redundant high-speed internet connectivity.</p>
         
 		<h4>Will my survey be secure?</h4>
         <p>Gilvus odio premo suscipit ut uxor valde. Caecus conventio esse ibidem ideo natu roto similis vulpes vulputate.</p>
 
-		<h4>Does WebSurvey support Internet Explorer (IE6)?</h4>
+		<h4>Does WebSurvey support all browsers?</h4>
 		<p>Jugis nostrud sagaciter torqueo veniam. Abdo enim ibidem in nutus vel venio virtus. Abbas dolore importunus luctus meus nulla pala tego valde. Comis proprius suscipit typicus.</p>
 
         <h4>Is WebSurvey mobile-friendly?  </h4>
