--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@ simply hand us your questions and we can do the rest</p>
               <p class="no-space"><strong>Service driven delivery model</strong></p>
               <ul>
                 <li>You provide survey questions</li>
-                <li>Tailor survey with your logos and branding</li>
+                <li>Tailor your survey with logos and branding</li>
                 <li>Get advice on the structure of your survey</li>
                 <li>Monitor your survey's progress </li>
                 <li>Support your survey with a helpdesk service</li>
