--- a/services/index.html
+++ b/services/index.html
@@ -16,7 +16,8 @@
         </div>
         <div class="description col-lg-10 col-md-10 col-sm-10 col-xs-12">
             <h4>Secure and reliable survey hosting</h4>
-            <p>We understand the importance of data security. WebSurvey is hosted in a secure Melbourne based co-location facility on high-end servers. Encryption services and secure certificates are also available to safeguard your online survey.</p>
+            <p>We understand the importance of data security. WebSurvey is hosted in a secure Melbourne based co-location facility on high-end servers.</p>
+            <p> Encryption services and secure certificates are also available to safeguard your online survey.</p>
             <p>&nbsp;</p>
     	</div>
      <!-- /feature-->   
@@ -26,7 +27,7 @@
         </div>
   		<div class="description col-lg-10 col-md-10 col-sm-10 col-xs-12">
             <h4>Help desk support for your respondents</h4>
-            <p>Praesent id nisi sed sapien tempor interdum nec quis lorem. Praesent accumsan risus ante, in tincidunt odio mattis ut. Integer molestie felis sed odio tincidunt fringilla. Curabitur nec felis iaculis, sagittis lorem id, condimentum nibh. Etiam mauris sem, ornare nec turpis nec, sodales condimentum nunc. Quisque iaculis in libero vitae aliquet. Sed consectetur sapien nec ligula dapibus, ut loboare consectetur eros nec consequat.</p>
+            <p>We provide you with a Support service throughout the survey period. In addition, we can also establish a helpdesk service for your respondents with a dedicated telephone support number and email address. This helpdesk can assist respondents with lost passwords, browser, network or other issues as required.</p>
         </div>
      <!-- /feature-->    
       <!--a feature-->
@@ -35,7 +36,9 @@
         </div>
   		<div class="description col-lg-10 col-md-10 col-sm-10 col-xs-12">
             <h4>Respondent profiles and email invitations</h4>
-            <p>Praesent id nisi sed sapien tempor interdum nec quis lorem. Praesent accumsan risus ante, in tincidunt odio mattis ut. Integer molestie felis sed odio tincidunt fringilla. Curabitur nec felis iaculis, sagittis lorem id, condimentum nibh. Etiam mauris sem, ornare nec turpis nec, sodales condimentum nunc. Quisque iaculis in libero vitae aliquet. Sed consectetur sapien nec ligula dapibus, ut loboare consectetur eros nec consequat.</p>
+            <p>WebSurvey allows you to create individual respondent credentials with usernames and passwords, allowing users to 'login' to complete your survey.</p>
+            <p>Invitations introducing your survey to respondents can be sent via email, as can completion reminders following up those who haven't responded before your survey's close.</p>
+            <p>After your survey is complete, you can run it again in the future and compare your results.</p>
         </div>
      <!-- /feature-->     
       <!--a feature-->
@@ -44,7 +47,9 @@
         </div>
   		<div class="description col-lg-10 col-md-10 col-sm-10 col-xs-12">
             <h4>Results, analysis and bulk survey reporting</h4>
-            <p>Praesent id nisi sed sapien tempor interdum nec quis lorem. Praesent accumsan risus ante, in tincidunt odio mattis ut. Integer molestie felis sed odio tincidunt fringilla. Curabitur nec felis iaculis, sagittis lorem id, condimentum nibh. Etiam mauris sem, ornare nec turpis nec, sodales condimentum nunc. Quisque iaculis in libero vitae aliquet. Sed consectetur sapien nec ligula dapibus, ut loboare consectetur eros nec consequat.</p>
+            <p>The results of your survey can be delivered in an agreed format. Typically, WebSurvey users receive results in Excel, CSV, HTML or SPSS.</p>
+            <p>If required, WebSurvey's data experts can also analyse your survey's results.</p>
+            <p>For large online surveys, bulk reports can automatically be prepared in Microsoft Office friendly formats.  Bulk reports are usually one per individual respondent, but can also be aggregated across demographic groups as required. Additional charges may apply.</p>
         </div>
      <!-- /feature-->      
         </div>    
