--- a/features/index.html
+++ b/features/index.html
@@ -45,7 +45,7 @@
         </div>
   		<div class="description col-lg-10 col-md-10 col-sm-10 col-xs-12">
             <h4>Cost-effective pricing</h4>
-            <p>Praesent id nisi sed sapien tempor interdum nec quis lorem. Praesent accumsan risus ante, in tincidunt odio mattis ut. Integer molestie felis sed odio tincidunt fringilla. Curabitur nec felis iaculis, sagittis lorem id, condimentum nibh. Etiam mauris sem, ornare nec turpis nec, sodales condimentum nunc. Quisque iaculis in libero vitae aliquet. Sed consectetur sapien nec ligula dapibus, ut loboare consectetur eros nec consequat.</p>
+            <p>WebSurvey's pricing is based on a per-use model. Set up costs begin at $2200 +GST, with a usage fee of $1.50 +GST per respondent. Additional services may not be covered by these fees. Speak to us to obtain a quote.</p>
         </div>
      <!-- /feature-->     
         </div>    
