--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                   <h4 data-animate-in="bounceInRight" data-animate-delay="de-02">
                     Mobile-ready, secure, and robust managed solutions
                   </h4>
-                  <p data-animate-in="bounceInRight" data-animate-delay="de-04">WebSurvey is a full-service online survey solution; 
+                  <p data-animate-in="bounceInRight" data-animate-delay="de-04">xx WebSurvey is a full-service online survey solution; 
 simply hand us your questions and we can do the rest</p>
                   <a href="https://demo.websurvey.net.au/" class="btn btn-lg btn-primary" data-animate-in="bounceInRight" data-animate-delay="de-06">View demo survey</a>
                 </div>
