Various text updates

--- a/about/index.html
+++ b/about/index.html
@@ -17,16 +17,16 @@
 handling. WebSurvey partners with you to design and implement surveys that are easy to use.
 Our services include:</p>
 <ul>
-<li>Social Research – with years of experience working with complex research projects and health related data
+<li><strong>Social Research</strong> – with years of experience working with complex research projects and health related data
 collection projects, we can assist you to achieve your survey goals.</li>
-<li>Statistics – our Statisticians are available to assist you with analysing your data.</li>
-<li>Programming – we have a team of programmers experienced in a wide range of applications, including Java, SQL,
+<li><strong>Statistics</strong> – our Statisticians are available to assist you with analysing your data.</li>
+<li><strong>Programming</strong> – we have a team of programmers experienced in a wide range of applications, including Java, SQL,
 HTML, Java Script, C, C++, Perl, Python, and PHP. We tailor our surveys and data collection projects to suit your
 needs.</li>
-<li>Front-end Design – both a visual and usability expert, our Front-End Designer can advise you on the best layout to
+<li><strong>Front-end Design</strong> – both a visual and usability expert, our Front-End Designer can advise you on the best layout to
 ensure your survey is attractive and easy to complete.</li>
-<li>Project Management – our dedicated project manager will work with you to ensure your survey suits your needs.</li>
-<li>Data processing – our Data Technicians have years of experience working with data entry processes, scanning,
+<li><strong>Project Management<strong> – our dedicated project manager will work with you to ensure your survey suits your needs.</li>
+<li><strong>Data processing</strong> – our Data Technicians have years of experience working with data entry processes, scanning,
 data cleansing, Optical Character Recognition (OCR) and data processing.</li>
 </ul>
 <p>Our delivery model is completely service driven. There's no application to learn or software to host, and your survey can be
