--- a/faq/technical-features.html
+++ b/faq/technical-features.html
@@ -54,10 +54,10 @@
 		<p>Jugis nostrud sagaciter torqueo veniam. Abdo enim ibidem in nutus vel venio virtus. Abbas dolore importunus luctus meus nulla pala tego valde. Comis proprius suscipit typicus.</p>
 
         <h4>Is WebSurvey mobile-friendly?  </h4>
-        <p>Amet appellatio lenis suscipere velit. Antehabeo caecus gravis loquor meus olim saepius tego vereor. Consectetuer facilisis jumentum letalis natu nostrud paulatim tamen utrum. Nobis usitas utinam. Dolus esca exputo laoreet mos quibus tum velit zelus. Ludus nulla scisco. Ad conventio dignissim nostrud olim persto quia. Gilvus hos incassum jugis nutus quidne sino turpis ut. Camur conventio dolor ex imputo jumentum lucidus verto. Eros hendrerit nibh nunc refero.</p>
+        <p>WebSurvey's standard functionality can be implemented to be responsive, user friendly and appropriately rendered on tablets and mobile phones as well as desktop & laptops. Our system assesses the device the respondent is using and provides pages appropriate for touch-technology.</p>
 		
         <h4>Does WebSurvey comply with the WCAG 2.0 Guidelines? </h4>
-        <p>Gilvus odio premo suscipit ut uxor valde. Caecus conventio esse ibidem ideo natu roto similis vulpes vulputate.</p>
+        <p>The majority of WebSurvey's standard functionality complies with the Web Content Accessibility Guidelines (WCAG) 2.0 guidelines at the AA standard. WebSurvey is able to provide fully compliant surveys where required. Please contact us for more information.</p>
    
         
                 
