--- a/features/index.html
+++ b/features/index.html
@@ -27,7 +27,8 @@
         </div>
         <div class="description col-lg-10 col-md-10 col-sm-10 col-xs-12">
             <h4>Accessible</h4>
-            <p>Praesent id nisi sed sapien tempor interdum nec quis lorem. Praesent accumsan risus ante, in tincidunt odio mattis ut. Integer molestie felis sed odio tincidunt fringilla. Curabitur nec felis iaculis, sagittis lorem id, condimentum nibh. Etiam mauris sem, ornare nec turpis nec, sodales condimentum nunc. Quisque iaculis in libero vitae aliquet. Sed consectetur sapien nec ligula dapibus, ut loboare consectetur eros nec consequat.</p>
+            <p>WebSurvey is able to ensure your survey fully complies with the Web Content Accessibility Guidelines (WCAG) 2.0 at the AA standard. Where formal certification is not necessary, WebSurvey can restrict the use of survey components to only those that have been assessed as compliant, and restrict the extent to which modifications are made to the survey in the way of colour contrasts or adjustments to these components.</p>
+            <p>Where formal certification is necessary, WebSurvey works with accessibility consultants to ensure that the final version of the survey complies with the guidelines.</p>
         </div>
      <!-- /feature-->  
       <!--a feature-->
@@ -36,7 +37,7 @@
         </div>
   		<div class="description col-lg-10 col-md-10 col-sm-10 col-xs-12">
             <h4>Mobile ready</h4>
-            <p>Praesent id nisi sed sapien tempor interdum nec quis lorem. Praesent accumsan risus ante, in tincidunt odio mattis ut. Integer molestie felis sed odio tincidunt fringilla. Curabitur nec felis iaculis, sagittis lorem id, condimentum nibh. Etiam mauris sem, ornare nec turpis nec, sodales condimentum nunc. Quisque iaculis in libero vitae aliquet. Sed consectetur sapien nec ligula dapibus, ut loboare consectetur eros nec consequat.</p>
+            <p>WebSurvey's functionality can be implemented to be responsive, user friendly and appropriately rendered on tablets and mobile phones as well as desktop and laptops. Our system assesses the device the respondent is using and provides pages appropriate for touch-technology. Talk with us about the relevance of responsive technology for your project.</p>
         </div>
      <!-- /feature-->     
       <!--a feature-->
