--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@ simply hand us your questions and we can do the rest</p>
           <h3 class="title">
             <a href="/features/">Full support</a>
           </h3>
-          <p>Wording to be supplied.</p>
+          <p>We create and publish your survey, manage invitations and provide project support during the survey.</p>
         </div>
         <div class="col-sm-12 col-md-12 space-below">
         <a href="/features/" class="btn btn-md btn-primary">More features</a> 
