--- a/about/index.html
+++ b/about/index.html
@@ -25,7 +25,7 @@ HTML, Java Script, C, C++, Perl, Python, and PHP. We tailor our surveys and data
 needs.</li>
 <li><strong>Front-end Design</strong> – both a visual and usability expert, our Front-End Designer can advise you on the best layout to
 ensure your survey is attractive and easy to complete.</li>
-<li><strong>Project Management<strong> – our dedicated project manager will work with you to ensure your survey suits your needs.</li>
+<li><strong>Project Management</strong> – our dedicated project manager will work with you to ensure your survey suits your needs.</li>
 <li><strong>Data processing</strong> – our Data Technicians have years of experience working with data entry processes, scanning,
 data cleansing, Optical Character Recognition (OCR) and data processing.</li>
 </ul>
