--- a/index.html
+++ b/index.html
@@ -159,16 +159,31 @@ simply hand us your questions and we can do the rest</p>
             <img src="/img/logos/TP.jpg" alt="Towers Perrin" class="lazyOwl img-responsive underlay" data-src="img/logos/TP.jpg" />
           </a>
           <a href="/">
-            <img src="/img/logos/HRC.jpg" alt="HRC" class="lazyOwl img-responsive underlay" data-src="img/logos/HRC.jpg" />
+            <img src="/img/logos/HRC.jpg" alt="Health Research Council Of New Zealand" class="lazyOwl img-responsive underlay" data-src="img/logos/HRC.jpg" />
           </a>
           <a href="/">
-            <img src="/img/logos/DSE.jpg" alt="DSE" class="lazyOwl img-responsive underlay" data-src="img/logos/DSE.jpg" />
+            <img src="/img/logos/DSE.jpg" alt="Department of Sustainability and Environment" class="lazyOwl img-responsive underlay" data-src="img/logos/DSE.jpg" />
           </a>
           <a href="/">
             <img src="/img/logos/VU.jpg" alt="Victoria University" class="lazyOwl img-responsive underlay" data-src="img/logos/VU.jpg" />
           </a>
           <a href="/">
             <img src="/img/logos/UoM.jpg" alt="University of Melbourne" class="lazyOwl img-responsive underlay" data-src="img/logos/UoM.jpg" />
+          </a>
+          <a href="/">
+            <img src="/img/logos/CEC.jpg" alt="Clinical Excellence Commission" class="lazyOwl img-responsive underlay" data-src="img/logos/CEC.jpg" />
+          </a>
+          <a href="/">
+            <img src="/img/logos/MHCWA.gif" alt="Mental Health Commission WA" class="lazyOwl img-responsive underlay" data-src="img/logos/MHCWA.gif" />
+          </a>
+          <a href="/">
+            <img src="/img/logos/NAB.jpg" alt="National Australia Bank" class="lazyOwl img-responsive underlay" data-src="img/logos/NAB.jpg" />
+          </a>
+          <a href="/">
+            <img src="/img/logos/Rgt.jpg" alt="Right Management" class="lazyOwl img-responsive underlay" data-src="img/logos/Rgt.jpg" />
+          </a>
+          <a href="/">
+            <img src="/img/logos/UoQ.jpg" alt="University of Queensland" class="lazyOwl img-responsive underlay" data-src="img/logos/UoQ.jpg" />
           </a>
          
         </div>
