Updates to FAQs & header

--- a/faq/about-web-survey.html
+++ b/faq/about-web-survey.html
@@ -48,7 +48,7 @@
        	<p>WebSurvey is based in Melbourne, Australia, at 2nd floor, 51-55 Johnston St, Fitzroy. See our contact details for a map.</p>
         
 		<h4>Who is Strategic Data? </h4>
-        <p>Strategic Data is an experienced data management consultancy which owns and operates WebSurvey.</p>
+        <p><a href="http://strategicdata.com.au/" target="_blank">Strategic Data</a> is an experienced data management consultancy which owns and operates WebSurvey.</p>
 		        
       </div>
     </div>
