--- a/faq/technical-features.html
+++ b/faq/technical-features.html
@@ -51,7 +51,9 @@
         <p>Gilvus odio premo suscipit ut uxor valde. Caecus conventio esse ibidem ideo natu roto similis vulpes vulputate.</p>
 
 		<h4>Does WebSurvey support all browsers?</h4>
-		<p>Jugis nostrud sagaciter torqueo veniam. Abdo enim ibidem in nutus vel venio virtus. Abbas dolore importunus luctus meus nulla pala tego valde. Comis proprius suscipit typicus.</p>
+		<p>We endeavour to ensure that WebSurvey functionality is appropriately rendered and functional on a range of supported browsers. WebSurvey continually updates its survey technology to incorporate industry-leading improvements – such as browser-responsive display – and to reflect best practice in accessibility and usability. This inevitably means that some older browsers will be incapable of rendering new technologies.</p>
+        <p>Internet Explorer 6 (IE6) is no longer being supported by Microsoft, and as such, it is no longer supported by WebSurvey.  If you believe your respondents may be using IE6, please discuss this with us.</p>
+        <p>Respondents using Internet Explorer 7 and Internet Explorer 8 may see some degradation in the appearance of some pages.  Survey functionality will not be affected.</p>
 
         <h4>Is WebSurvey mobile-friendly?  </h4>
         <p>WebSurvey's standard functionality can be implemented to be responsive, user friendly and appropriately rendered on tablets and mobile phones as well as desktop & laptops. Our system assesses the device the respondent is using and provides pages appropriate for touch-technology.</p>
