Resizing logos & updating DC page

--- a/data-collection/index.html
+++ b/data-collection/index.html
@@ -13,27 +13,30 @@
           <h5>Online Data Collection for Research Projects, Audits, Census Projects and Surveys</h5>
             <p><strong>Looking for a way to collect and process data quickly and conveniently?</strong>
             <p>The data management specialists at WebSurvey can set up and manage your data collection project so that you get the information you need.</p>
+            <p>In the past collecting data from your target community involved designing, printing and posting paper forms, chasing up those who hadn’t responded, getting the data entry done and manually preparing reports while checking for inaccuracies.</p>
+            <p>Fortunately those painful days can now be over because WebSurvey makes it easy to do away with forms and collect your data electronically. This means you’ll get a faster response, real time feedback and if needed, the data can be validated in real time online.</p>
+            <p>WebSurvey can help with the following project types:</p>
 <ul>
-<li><strong>Social Research</strong> – with years of experience working with complex research projects and health related data
-collection projects, we can assist you to achieve your survey goals.</li>
-<li><strong>Statistics</strong> – our Statisticians are available to assist you with analysing your data.</li>
-<li><strong>Programming</strong> – we have a team of programmers experienced in a wide range of applications, including Java, SQL,
-HTML, Java Script, C, C++, Perl, Python, and PHP. We tailor our surveys and data collection projects to suit your
-needs.</li>
-<li><strong>Front-end Design</strong> – both a visual and usability expert, our Front-End Designer can advise you on the best layout to
-ensure your survey is attractive and easy to complete.</li>
-<li><strong>Project Management</strong> – our dedicated project manager will work with you to ensure your survey suits your needs.</li>
-<li><strong>Data processing</strong> – our Data Technicians have years of experience working with data entry processes, scanning,
-data cleansing, Optical Character Recognition (OCR) and data processing.</li>
+<li>document collection</li>
+<li>census data</li>
+<li>audits</li>
+<li>longitudinal surveys</li>
+<li>tax-pack style data collections</li>
+<li>360 degree performance management systems</li>
 </ul>
-<p>Our delivery model is completely service driven. There's no application to learn or software to host, and your survey can be
-branded to provide a transparent experience to your respondents.</p>
-<p>With capability for quantitative and qualitative questions, adaptive logic and answer variations, WebSurvey can create online
-surveys that behave exactly the way you want.</p>
-<p>To take advantage of WebSurvey or for more information, contact us on +61 3 9340 9001 or 1300 655 226 from anywhere in
-Australia.</p>
-<p>We're based in Fitzroy in Melbourne and service clients throughout Australia and around the world.</p>
-
+<p><strong>No project is too big or too small</strong></p>
+<p>WebSurvey’s team works with government departments, local councils, schools, kindergartens, libraries, industry associations and anyone that needs specialist data collection help.</p>
+<p>Our skills combine data collection, technical and IT expertise, plus personalised customer service. Data collection, management and reporting have been our key focus for over ten years and we use our experience to ensure that you get the information you need.</p>
+          <h5>Online data collection services</h5>
+            <p>Our services include:</p>
+            <p><strong>Designing the data collection website</strong> to make it easy for respondents to submit the data.</p>
+            <p><strong>Adding validations</strong> to ensure that the data is constrained, so, for example, only appropriate types of data are submitted.</p>
+            <p><strong>Pre-populated data</strong> – We can pre-load known information, such as registration number or address, or information collected at an earlier time.</p>
+            <p><strong>Personal service</strong> – The WebSurvey team is focused on understanding your needs and providing a solution. As we set up your online data collection system we check that the questions and validations will provide you with the information you need.</p>
+            <p><strong>Secure and reliable survey hosting</strong> – We understand the importance of data security. WebSurvey is hosted in a secure Melbourne based co-location facility on high-end servers.</p>
+            <p><strong>Providing reports in an agreed format,</strong> including SPSS, Excel, html, PDF and PowerPoint.</p>
+          <h5>Need specialist help with a data collection project?</h5>
+            <p>Please contact us via phone or email to discuss your needs and schedule a free no-obligation one hour consultation.</p>
         </div>
         
         
