Correction to FAQ

--- a/faq/technical-features.html
+++ b/faq/technical-features.html
@@ -51,8 +51,7 @@
         <p>Gilvus odio premo suscipit ut uxor valde. Caecus conventio esse ibidem ideo natu roto similis vulpes vulputate.</p>
 
 		<h4>Does WebSurvey support all browsers?</h4>
-		<p>We endeavour to ensure that WebSurvey functionality is appropriately rendered and functional on a range of supported browsers. WebSurvey continually updates its survey technology to incorporate industry-leading improvements – such as browser-responsive display – and to reflect best practice in accessibility and usability. This inevitably means that some older browsers will be incapable of rendering new technologies.</p>
-        <p>Internet Explorer 6 (IE6) is no longer being supported by Microsoft, and as such, it is no longer supported by WebSurvey.  If you believe your respondents may be using IE6, please discuss this with us.</p>
+		<p>We endeavour to ensure that all WebSurvey widgets are appropriately rendered and functional on a range of supported browsers. WebSurvey continually updates its survey technology to incorporate industry-leading improvements – such as browser-responsive display – and to reflect best practice in accessibility and usability. This inevitably means that some older browsers will be incapable of rendering new technologies.</p>
         <p>Respondents using Internet Explorer 7 and Internet Explorer 8 may see some degradation in the appearance of some pages.  Survey functionality will not be affected.</p>
 
         <h4>Is WebSurvey mobile-friendly?  </h4>
