--- a/about/privacy.html
+++ b/about/privacy.html
@@ -10,7 +10,17 @@
     </div>
     <div id="privacy">
       <div class="inner">
-
+   		 <!--Privacy-->
+        <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+            <p>In general, you may visit this Web site without providing any personal information to us. If you choose to provide information voluntarily, we will use that information in accordance with our data privacy principles and in accordance with any specific notice given as part of the collection of that data.</p>
+          <h5>Web site practices</h5>
+            <p>Non-Identifiable Information – Like many other Web sites, this Web site automatically collects certain non-identifiable information. Some of this is collected as an inherent part of the browsing process – e.g. your IP address, your ISP’s IP address, your browser, etc. For some other information, you have a choice about its provision – for example, cookie use, downloading / uploading file, etc. This non-identifiable information is used for Web sites and system administration purposes and to improve our online services. Your non-identifiable information may be disclosed to others and permanently archived for future use. This information is used to track Web site use and is not used to link to personal data.</p>
+            <p>Cookies – This Web site uses "cookies", a technology that installs information on a Web site user's computer to permit the Web site to recognize future visits using that computer. Cookies enhance the convenience and use of the Web site. For example, the information provided through cookies is used to recognise you as a previous user of the Web site, to track your activity at the Web site in order to respond to your needs, to offer personalised Web page content and information for your use, to automatically populate online forms with your personal information for your convenience, and to otherwise facilitate your Web site experience.</p>
+            <p>You may choose to decline cookies if your browser permits, but doing so may affect your use of this Web site and your ability to access or use certain Web site features.</p>
+          <h5>Other matters</h5>
+            <p>Security – WebSurvey works to keep our servers, applications and databases secure and free from unauthorised access and use, by using physical, administrative and technological measure to protect the information we maintain. Nevertheless, you should be conscious of the type of data you choose to transmit and the means by which you do so – if you have any concerns about the appropriate transmission of your data, feel free to contact us.</p>
+            <p>Other Web sites – This Web site may contain links to other Web sites. Please be conscious that, once you have clicked to leave our site, the privacy principles of other providers apply. You will need to contact them if you require information about their privacy principles.</p>
+            <p>Privacy Notice Changes – WebSurvey may change, supplement or amend this Notice as it relates to your future use of this Web site from time to time, for any reason, by posting a revised Notice on this Web site. This notice was last updated in November 2015.</p>
       </div>
     </div>
   </div>
