Updates to privacy & security

--- a/faq/technical-features.html
+++ b/faq/technical-features.html
@@ -48,7 +48,7 @@
        	<p>We host our surveys on our own systems at a secure Melbourne based co-location facility. This facility includes 24/7 monitoring, 24/7 guarded and monitored access, climate control, redundant power and redundant high-speed internet connectivity.</p>
         
 		<h4>Will my survey be secure?</h4>
-        <p>Gilvus odio premo suscipit ut uxor valde. Caecus conventio esse ibidem ideo natu roto similis vulpes vulputate.</p>
+        <p>The data trasmitted from your device to our servers is encrypted to ensure security during data submission. Our servers are hosted in a dedicated cabinet in a Melbourne based co-location facility containing our network of high-end servers. WebSurvey is operated by Strategic Data and uses the same infrastructure. Strategic Data has implemented and maintains policy and procedure consistent with certification at the PROTECTED level of the Australian Signals Directorate’s (ASD) Australian Government Information Security Manual (ISM).</p>
 
 		<h4>Does WebSurvey support all browsers?</h4>
 		<p>We endeavour to ensure that all WebSurvey widgets are appropriately rendered and functional on a range of supported browsers. WebSurvey continually updates its survey technology to incorporate industry-leading improvements – such as browser-responsive display – and to reflect best practice in accessibility and usability. This inevitably means that some older browsers will be incapable of rendering new technologies.</p>
