--- a/services/index.html
+++ b/services/index.html
@@ -16,8 +16,8 @@
         </div>
         <div class="description col-lg-10 col-md-10 col-sm-10 col-xs-12">
             <h4>Secure and reliable survey hosting</h4>
-            <p>We understand the importance of data security. WebSurvey is hosted in a secure Melbourne based co-location facility on high-end servers.</p>
-            <p> Encryption services and secure certificates are also available to safeguard your online survey.</p>
+            <p>We understand that state-of-the-art data security is essential. WebSurvey is hosted in a secure Melbourne based co-location facility in a dedicated cabinet containing our network of high-end servers.</p>
+            <p>Our online functionality is closely monitored by our dedicated IT Infrastructure team. WebSurvey is operated by Strategic Data and uses the same infrastructure. Strategic Data has implemented and maintains policy and procedure consistent with certification at the PROTECTED level of the Australian Signals Directorate’s (ASD) Australian Government Information Security Manual (ISM).</p>
             <p>&nbsp;</p>
     	</div>
      <!-- /feature-->   
